--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Magic Eight Ball</string>
+    <string name="txt_ask">Ask</string>
+    <string name="txt_welcome">Ask the Eight Ball</string>
 </resources>
